feat: Importación masiva de transacciones desde Excel
✅ CARACTERÍSTICAS:
- Botón 'Importar Excel' en módulo de Movimientos
- Descarga de plantilla .xlsx preformateada
- Validación de datos fila por fila (fechas, montos, cuentas)
- Previsualización de datos antes de importar
- Reporte detallado de errores por fila

🔧 TÉCNICO:
- Implementación usando librería 'xlsx'
- Manejo de fechas seriales de Excel
- Sincronización automática con Supabase tras importar

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@capacitor/android": "^8.0.1",
+    "@capacitor/cli": "^8.0.1",
+    "@capacitor/core": "^8.0.1",
     "@supabase/supabase-js": "^2.90.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.4.1",
